# MonitorBoss

./: .coverage  .coveragerc  .gitignore  INSTALL.md  MonitorBoss.exe.spec  MonitorController.exe.spec  README.md  USAGE.md  arg_parser.py  build.ps1  cli.py  impl.py  main.py  pyproject.toml  scratch.py  softmon.py
.github/workflows/: build.yml  coverage.yml  main.yml  rolling-release.yml  test.yml
conf/: MonitorBoss.conf  MonitorBoss.toml
hwtest/: test_os_driver.py
libs/: .gitignore
monitorboss/: __init__.py  cli.py  config.py  impl.py  info.py  main.py  output.py  scratch.py
monitorcontrol/: __init__.py  __main__.py  monitorcontrol.py  vcp_abc.py  vcp_codes.py  vcp_windows.py
monitorcontrol/ddcctl/: DDC.c  DDC.h  LICENSE  ddcctl.c  ddcctl.m  macosddc.c  macosddc.pyx  setup.py
monitorcontrol/vcp/: __init__.py  vcp_abc.py  vcp_codes.py  vcp_linux.py  vcp_macos.py  vcp_macos_arm.py  vcp_macos_intel.py  vcp_windows.py
monitorcontrol/vcp/ddcctl_refactor/: ddcctl.m
pyddc/: __init__.py  driver.py  macos.py  vcp_abc.py  vcp_codes.py  vcp_linux.py  vcp_windows.py
src/: cli.py  config.py  impl.py  main.py  scratch.py
test/: __init__.py  conftest.py  main.py  test_monitorboss.py  test_pyddc.py  test_utils.py  testdata.py  vcp_dummy.py
test/monitorboss/: __init__.py  mb_com_perms.py  mb_test_resources.py  test_cli_units.py  test_config_units.py  test_impl_units.py  test_info_units.py  test_monitorboss.py  test_monitorboss_integration.py  test_monitorboss_units.py  test_output_units.py
test/pyddc/: __init__.py  test_pyddc.py  vcp_dummy.py
test_hw/: conftest.py  test_os_driver.py
utils/: usage_md.py
