[tool.poetry]
name = "MonitorBoss"
version = "2025.01.05"
description = "Boss your monitors around"
authors = [
    "Seizure <https://github.com/Seizure>",
    "Rangi <https://github.com/Rangi42>"
]
readme = "README.md"
license = "LGPL-3.0-only"
packages = [{include = "monitorboss"}]

[tool.poetry.dependencies]
python = "^3.10,<3.15"
tomlkit = "^0.12.4"
frozendict = "^2.4.4"
pytest-cov = "^5.0.0"

[tool.poetry.group.mccs.dependencies]
pyudev = { version = ">=0.23,<0.25", markers = "sys_platform != 'win32'" }

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


