[project]
name = "MonitorBoss"
version = "2025.01.05"
description = "Boss your monitors around"
authors = [
    { name = "Seizure", email = "https://github.com/Seizure" },
    { name = "Rangi", email = "https://github.com/Rangi42" },
]
requires-python = ">=3.10,<4,<3.15"
readme = "README.md"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tomlkit>=0.12.4,<0.13",
    "frozendict>=2.4.4,<3",
    "pytest-cov>=5.0.0,<6",
    "pydantic>=2.0,<3",
]

[dependency-groups]
mccs = ["pyudev>=0.23,<0.25 ; sys_platform != 'win32'"]
dev = [
    "pyinstaller>=6.5.0,<7",
    "pytest>=8.1.1,<9",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["monitorboss"]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


