[project]
name = "MonitorBoss"
version = "2025.01.05"
description = "Boss your monitors around"
authors = [
    { name = "Seizure", email = "https://github.com/Seizure" },
    { name = "Rangi", email = "https://github.com/Rangi42" },
]
requires-python = ">=3.10,<4,<3.15"
readme = "README.md"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
monitorboss = [
    "tomlkit>=0.14.0,<0.15",
    "frozendict>=2.4.4,<3",
    "pydantic>=2.0,<3",
    "pyedid>=1.0.3,<2",
]
pyddc = ["pyudev>=0.23,<0.25 ; sys_platform != 'win32'"]
dev = [
    "pyinstaller>=6.5.0,<7",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["monitorboss"]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


